docs/sf-export/sfdx-raw/objects/Settlement__c/fields/AmountToCreditor__c.field-meta.xml
<CustomField>
    <fullName>AmountToCreditor__c</fullName>
    <label>Amount To Creditor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>