docs/sf-export/sfdx-raw/objects/Settlement__c/fields/Client_Account__c.field-meta.xml
<CustomField>
    <fullName>Client_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Settlements (Client Account)</relationshipLabel>
    <relationshipName>Settlements2</relationshipName>
    <type>Lookup</type>
</CustomField>