docs/sf-export/sfdx-raw/objects/Settlement__c/fields/Creditor__c.field-meta.xml
<CustomField>
    <fullName>Creditor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Creditor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Settlements (Creditor)</relationshipLabel>
    <relationshipName>Settlements1</relationshipName>
    <type>Lookup</type>
</CustomField>