docs/sf-export/sfdx-raw/objects/Settlement__c/fields/External_SAS_Id__c.field-meta.xml
<CustomField>
    <fullName>External_SAS_Id__c</fullName>
    <label>External SAS Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>