docs/sf-export/sfdx-raw/objects/Settlement__c/fields/Payment_Method_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Amount__c</fullName>
    <label>Payment Method Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>