docs/sf-export/sfdx-raw/objects/Settlement__c/fields/SettlementAmount__c.field-meta.xml
<CustomField>
    <fullName>SettlementAmount__c</fullName>
    <formula>AmountToCreditor__c +  Payment_Method_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Settlement Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>