docs/sf-export/sfdx-raw/objects/Settlement__c/fields/Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Sync_Status__c</fullName>
    <label>Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sync Pending</fullName>
                <default>true</default>
                <label>Sync Pending</label>
            </value>
            <value>
                <fullName>In Sync</fullName>
            </value>
            <value>
                <fullName>Sync Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>