docs/sf-export/sfdx-raw/objects/Settlement__c/recordTypes/Offered_Settlements.recordType-meta.xml
<RecordType>
    <fullName>Offered_Settlements</fullName>
    <active>true</active>
    <label>Offered Settlements</label>
</RecordType>