docs/sf-export/sfdx-raw/objects/Settlement__c/recordTypes/Settlements.recordType-meta.xml
<RecordType>
    <fullName>Settlements</fullName>
    <active>true</active>
    <label>Settlements</label>
</RecordType>